ecmascript/parser/tests/test262-error-references/fail/1aefe47e20eb91fa.module.js.stderr
error: Unexpected token `<eof>`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/1aefe47e20eb91fa.module.js:1:1
  |
1 | await
  | ^^^^^

error: top level await requires target to es2017 or higher and topLevelAwait:true for ecmascript
 --> $DIR/tests/test262-parser/fail/1aefe47e20eb91fa.module.js:1:1
  |
1 | await
  | ^^^^^

